--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -3,21 +3,29 @@
   padding-top: 100px;
 }
 
+/* Light Mode */
 .hero h1 {
   font-size: 48px;
   margin-bottom: 10px;
 }
 
 .hero h2 {
-  color: #38bdf8;
+  color: #4d73f3;
   margin-bottom: 20px;
 }
 
 .hero p {
-  color: #cbd5e1;
   margin-bottom: 30px;
 }
 
+/* Dark Mode Adjustments */
+body.dark-mode .hero h2 {
+  color: #6997e3;
+}
+
+body.dark-mode .hero p {
+  color: #f9f4f4;
+}
 .hero button {
   padding: 12px 25px;
   background: #38bdf8;
@@ -25,4 +33,4 @@
   border-radius: 8px;
   cursor: pointer;
   font-weight: 600;
-}
+} 
