--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px 10%;
-  background: #0b8189;
+  background: rgb(122, 184, 155);
   position: sticky;
   top: 0;
 }
