--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -16,7 +16,7 @@
 }
 
 .project-card {
-  background: rgb(177, 208, 212);
+  background: rgb(107, 174, 157);
   width: 300px;
   border-radius: 12px;
   padding: 20px;
