--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -13,7 +13,7 @@
 }
 
 .card {
-  background: rgb(147, 171, 174);
+  background: rgb(107, 174, 157);
   padding: 20px;
   color: #070d49;
   border-radius: 12px;
